RESOLVED FIXED184022
webrtc/video-update-often.html is flakily crashing on iOS simulator Debug in PlaybackSessionManager::removeClientForContext
https://bugs.webkit.org/show_bug.cgi?id=184022
Summary webrtc/video-update-often.html is flakily crashing on iOS simulator Debug in ...
youenn fablet
Reported 2018-03-26 14:05:48 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x00000001142f6334 WTFCrash + 36 1 com.apple.WebKit 0x000000010c70b048 WebKit::PlaybackSessionManager::removeClientForContext(unsigned long long) + 88 2 com.apple.WebKit 0x000000010c70b29c WebKit::PlaybackSessionManager::setUpPlaybackControlsManager(WebCore::HTMLMediaElement&) + 316 3 com.apple.WebKit 0x000000010c9e7649 WebKit::WebChromeClient::setUpPlaybackControlsManager(WebCore::HTMLMediaElement&) + 41 4 com.apple.WebCore 0x0000000119da9953 WebCore::HTMLMediaElement::updatePlaybackControlsManager() + 115 5 com.apple.WebCore 0x0000000119da8ab3 WebCore::HTMLMediaElement::~HTMLMediaElement() + 1699 6 com.apple.WebCore 0x0000000119e6b876 WebCore::HTMLVideoElement::~HTMLVideoElement() + 534 7 com.apple.WebCore 0x0000000119e69035 WebCore::HTMLVideoElement::~HTMLVideoElement() + 21 8 com.apple.WebCore 0x0000000119e69059 WebCore::HTMLVideoElement::~HTMLVideoElement() + 25 9 com.apple.WebCore 0x0000000119aee0bb WebCore::Node::removedLastRef() + 91 10 com.apple.WebKit 0x000000010c46ba73 WebCore::Node::deref() + 371 11 com.apple.WebKit 0x000000010c71b621 void WTF::derefIfNotNull<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement*) + 49 12 com.apple.WebKit 0x000000010c71b5e9 WTF::RefPtr<WebCore::HTMLMediaElement, WTF::DumbPtrTraits<WebCore::HTMLMediaElement> >::~RefPtr() + 41 13 com.apple.WebKit 0x000000010c70aee5 WTF::RefPtr<WebCore::HTMLMediaElement, WTF::DumbPtrTraits<WebCore::HTMLMediaElement> >::~RefPtr() + 21 14 com.apple.WebKit 0x000000010c70ac94 WebKit::PlaybackSessionManager::removeContext(unsigned long long) + 1108 15 com.apple.WebKit 0x000000010c70b07b WebKit::PlaybackSessionManager::removeClientForContext(unsigned long long) + 139 16 com.apple.WebKit 0x000000010c70b344 WebKit::PlaybackSessionManager::setUpPlaybackControlsManager(WebCore::HTMLMediaElement&) + 484 17 com.apple.WebKit 0x000000010c9e7649 WebKit::WebChromeClient::setUpPlaybackControlsManager(WebCore::HTMLMediaElement&) + 41 18 com.apple.WebCore 0x0000000119da9953 WebCore::HTMLMediaElement::updatePlaybackControlsManager() + 115 19 com.apple.WebCore 0x0000000119de96d7 WTF::Function<void ()>::CallableWrapper<std::__1::__bind<void (WebCore::HTMLMediaElement::*)(), WebCore::HTMLMediaElement*> >::call() + 247 20 com.apple.WebCore 0x0000000117cda5eb WTF::Function<void ()>::operator()() const + 139 21 com.apple.WebCore 0x0000000117ea96f9 WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::'lambda'()::operator()() const + 137 22 com.apple.WebCore 0x0000000117ea94d9 WTF::Function<void ()>::CallableWrapper<WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::'lambda'()>::call() + 25 23 com.apple.WebCore 0x0000000117cda5eb WTF::Function<void ()>::operator()() const + 139 24 com.apple.WebCore 0x000000011a4a8b17 WebCore::TaskDispatcher<WebCore::Timer>::dispatchOneTask() + 119 25 com.apple.WebCore 0x000000011a4a88cf WebCore::TaskDispatcher<WebCore::Timer>::sharedTimerFired() + 255 26 com.apple.WebCore 0x000000011a4ac621 WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1::operator()() const + 17 27 com.apple.WebCore 0x000000011a4ac5e9 WTF::Function<void ()>::CallableWrapper<WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1>::call() + 25 28 com.apple.WebCore 0x0000000117cda5eb WTF::Function<void ()>::operator()() const + 139 29 com.apple.WebCore 0x0000000117d5d689 WebCore::Timer::fired() + 25 30 com.apple.WebCore 0x000000011a4df5c4 WebCore::ThreadTimers::sharedTimerFiredInternal() + 452 31 com.apple.WebCore 0x000000011a4f5911 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 33 32 com.apple.WebCore 0x000000011a4f58c9 WTF::Function<void ()>::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0>::call() + 25 33 com.apple.WebCore 0x0000000117cda5eb WTF::Function<void ()>::operator()() const + 139 34 com.apple.WebCore 0x000000011a4b7b55 WebCore::MainThreadSharedTimer::fired() + 101 35 com.apple.WebCore 0x000000011a5545a9 WebCore::timerFired(__CFRunLoopTimer*, void*) + 41
Attachments
WIP (2.25 KB, patch)
2018-03-26 14:07 PDT, youenn fablet
no flags
Patch (2.37 KB, patch)
2018-04-04 10:50 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-03-26 14:07:00 PDT
EWS Watchlist
Comment 2 2018-03-26 14:08:44 PDT
Attachment 336541 [details] did not pass style-queue: ERROR: Source/WebKit/WebProcess/cocoa/PlaybackSessionManager.mm:264: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 3 2018-04-04 10:50:48 PDT
EWS Watchlist
Comment 4 2018-04-04 10:52:13 PDT
Attachment 337191 [details] did not pass style-queue: ERROR: Source/WebKit/WebProcess/cocoa/PlaybackSessionManager.mm:264: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5 2018-04-04 19:05:07 PDT
Comment on attachment 337191 [details] Patch Rejecting attachment 337191 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 337191, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ing rebase: :040000 040000 0eb32cc993e8b85218d7fb643ac6f302495ed911 74eca5052fc797f88153da7bc22c7d2b38fff0f7 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.webkit.org/results/7211098
WebKit Commit Bot
Comment 6 2018-04-04 19:40:54 PDT
Comment on attachment 337191 [details] Patch Clearing flags on attachment: 337191 Committed r230292: <https://trac.webkit.org/changeset/230292>
WebKit Commit Bot
Comment 7 2018-04-04 19:40:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-04-04 19:41:19 PDT
Note You need to log in before you can comment on or make changes to this bug.