webrtc/video-update-often.html is flakily crashing on iOS simulator Debug https://bugs.webkit.org/show_bug.cgi?id=184022

Reviewed by Jer Noble.

Remove client context once the new context identifier is set.
Covered by test no longer crashing locally.

* WebProcess/cocoa/PlaybackSessionManager.mm:
(WebKit::PlaybackSessionManager::setUpPlaybackControlsManager):


Canonical link: https://commits.webkit.org/199878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230292 268f45cc-cd09-0410-ab3c-d52691b4dbfc